Blocked images will no longer show the broken image icon, nor will they show ALT text. Repairs alleged 'regression' from previous ALT text fixes. b=109090 r=alexsavulov sr=kin